--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
    "dependencies": {
       "canvas": "^2.11.0",
       "commander": "~10.0.0",
-      "pdfjs-dist": "~3.3.122"
+      "pdfjs-dist": "^4.6.82"
    },
    "devDependencies": {
       "eslint": "^8.33.0",
       "mocha": "^10.2.0"
    },
+   "type": "module",
    "scripts": {
       "test": "mocha"
    },
